# i18n-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
include/i18n/: i18n.hpp
locales/en/: messages.properties
locales/es/: messages.properties
locales/fr/: messages.properties
